--- a/package.json
+++ b/package.json
@@ -16,14 +16,22 @@
     "babel-preset-react": "^6.24.1",
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
+    "react-hot-loader": "^3.1.3",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
+    "core-js": "^2.5.3",
+    "distance": "^1.0.0",
     "geolib": "^2.0.24",
+    "google": "^2.1.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-deep-link-state": "^0.0.2",
     "react-dom": "^16.2.0",
+    "react-geosuggest": "^2.7.0",
+    "react-google-maps": "^9.4.5",
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
